--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ nicholaspai/kovan-staging",
-    "deploy-dev": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ umaprotocol/uma-kovan",
+    "deploy-dev": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ nicholaspai/kovan-debug",
     "create-local": "graph create --node http://localhost:8020/ umaprotocol/uma-kovan",
     "remove-local": "graph remove --node http://localhost:8020/ umaprotocol/uma-kovan",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 umaprotocol/uma-kovan"
