--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -51,6 +51,69 @@ templates:
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleCollateralTransfer
+  - name: PerpetualCreator
+    kind: ethereum/contract
+    network: kovan
+    source:
+      abi: PerpetualCreator
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/index.ts
+      entities:
+        - ContractCreator
+        - FinancialContract
+      abis:
+        - name: PerpetualCreator
+          file: ./abis/PerpetualCreator.json
+        - name: Perpetual
+          file: ./abis/Perpetual.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: CreatedPerpetual(indexed address,indexed address)
+          handler: handleCreatedPerpetual
+  - name: Perpetual
+    kind: ethereum/contract
+    network: kovan
+    source:
+      abi: Perpetual
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/index.ts
+      entities:
+        - FinancialContract
+      abis:
+        - name: Perpetual
+          file: ./abis/Perpetual.json
+      eventHandlers:
+        - event: PositionCreated(indexed address,indexed uint256,indexed uint256)
+          handler: handlePositionCreated
+        - event: Redeem(indexed address,indexed uint256,indexed uint256)
+          handler: handleRedeem
+        - event: Deposit(indexed address,indexed uint256)
+          handler: handleDeposit
+        - event: Withdrawal(indexed address,indexed uint256)
+          handler: handleWithdrawal
+        - event: NewSponsor(indexed address)
+          handler: handleNewSponsor
+        - event: EndedSponsorPosition(indexed address)
+          handler: handleEndedSponsorPosition
+        - event: LiquidationCreated(indexed address,indexed address,indexed uint256,uint256,uint256,uint256,uint256)
+          handler: handleLiquidationCreated
+        - event: LiquidationDisputed(indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleLiquidationDisputed
+        - event: DisputeSettled(indexed address,indexed address,indexed address,address,uint256,bool)
+          handler: handleDisputeSettled
+        - event: RequestWithdrawal(indexed address,indexed uint256)
+          handler: handleRequestWithdrawal
+        - event: RequestWithdrawalCanceled(indexed address,indexed uint256)
+          handler: handleRequestWithdrawalCanceled
+        - event: RequestWithdrawalExecuted(indexed address,indexed uint256)
+          handler: handleRequestWithdrawalExecuted
   - name: ExpiringMultiPartyCreator
     kind: ethereum/contract
     network: kovan
@@ -86,7 +149,6 @@ templates:
       file: ./src/index.ts
       entities:
         - FinancialContract
-        - Store
       abis:
         - name: ExpiringMultiParty
           file: ./abis/ExpiringMultiParty.json
@@ -125,6 +187,3 @@ templates:
           handler: handleRequestWithdrawalCanceled
         - event: RequestWithdrawalExecuted(indexed address,indexed uint256)
           handler: handleRequestWithdrawalExecuted
-      callHandlers:
-        - function: withdrawLiquidation(uint256,address)
-          handler: handleLiquidationWithdrawn
